[tool.poetry]
name = "internplus_backend"
version = "0.1.0"
description = ""
authors = ["Alex Xie <alexieyizhe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
graphene-django = "^2.15.0"
Django = "^3.1.5"
django-cors-headers = "^3.6.0"
django-extensions = "^3.1.0"
django-filter = "^2.4.0"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
